Co-authored-by: Dhinesh <BalaDhinesh@users.noreply.github.com> Co-authored-by: Sharanesh R <ee19b116@smail.iitm.ac.in> Co-authored-by: Swathi G <ch19b094@smail.iitm.ac.in>

--- a/layouts/partials/products.html
+++ b/layouts/partials/products.html
@@ -17,7 +17,7 @@
                 <i class="tf-ion-plus-round"></i>
               </a>
             </div>
-            <img class="img-fluid" src="{{range first 1 .Params.images}}{{.|absURL}}{{end}}" alt="{{.Title}}">
+            <img class="img-fluid" src="{{range first 1 .Params.images}}{{.|absURL}}{{end}}" alt="{{.Title}}" style="border-radius: 25px;">
           </div>
           {{ end }}
         </div>
